--- a/src/modules/BooksPage/components/BooksPage/BooksPage.module.scss
+++ b/src/modules/BooksPage/components/BooksPage/BooksPage.module.scss
@@ -1,6 +1,6 @@
 .booksPage {
   background-color: vars.$background-color;
-  padding-block: 48px;
+  padding-bottom: 48px;
 }
 
 .pageContent {
